# SpSolver

./: CMakeLists.txt  README.md
include/: CudaSolver.h  MKLSolver.h  SpMat.h
src/: CudaSolver.cpp  MKLSolver.cpp  SpMat.cpp  main.cpp
